--- a/src/app/user/signup-page/signup-page.component.html
+++ b/src/app/user/signup-page/signup-page.component.html
@@ -18,13 +18,13 @@
       <h3>Create an Armazon account, and enjoy great benefits!</h3>
     </div>
 
-    <div class="bottom-content">
+    <footer class="bottom-content">
       <p>
         Armazon.do - <a href="#">Cookie Policy</a> and 
         <a href="#">Privacy Policy</a>
       </p>
       <p>&copy; Armazon by Adison P. Martínez 2019-{{ currentYear }}</p>
-    </div>
+    </footer>
   </div>
 
   <div class="signup-form-column">
