--- a/src/app/user/login-page/login-page.component.html
+++ b/src/app/user/login-page/login-page.component.html
@@ -19,13 +19,13 @@
       <h3>Log in to your Armazon account</h3>
     </div>
 
-    <div class="bottom-content">
+    <footer class="bottom-content">
       <p>
         Armazon.do - <a href="#">Cookie Policy</a> and 
         <a href="#">Privacy Policy</a>
       </p>
       <p>&copy; Armazon by Adison P. Martínez 2019-{{ currentYear }}</p>
-    </div>
+    </footer>
   </div>
 
   <div class="login-form-column">
