--- a/src/app/navbar/search-bar/search-bar.component.html
+++ b/src/app/navbar/search-bar/search-bar.component.html
@@ -3,7 +3,7 @@
   (click)="onClickOutside($event)"
   *ngIf="showSearchbox"
   class="overlay">
-  <section #searchbox class="search-area">
+  <section class="search-area">
     <button 
       (click)="onClose()"
       class="btn-circle close-btn" 
