--- a/src/app/shared/aside-panel/aside-panel.component.html
+++ b/src/app/shared/aside-panel/aside-panel.component.html
@@ -6,6 +6,7 @@
 
   <aside #panel class="panel">
     <div class="top">
+      <h3 class="title">{{ title }}</h3>
       <button 
         (click)="onClose()"
         type="button" 
