--- a/src/app/product/shopping-bag/shopping-bag.component.scss
+++ b/src/app/product/shopping-bag/shopping-bag.component.scss
@@ -21,11 +21,10 @@
     }
   }
 
-
   .content {
     width: 100%;
     height: 100%;
-    padding: 0 3rem;
+    padding: 0 2rem;
     padding-bottom: 70px;
     animation: reveal 0.4s ease;
   }
@@ -44,13 +43,6 @@
       display: none;
     }
 
-    .title {
-      margin-bottom: 2rem;
-      text-align: center;
-      font-size: 1rem;
-      font-weight: 400;
-    }
-
     li {
       display: flex;
       width: inherit;
@@ -58,6 +50,18 @@
       
       &:not(:last-of-type) {
         border-bottom: thin solid #e7edff;
+      }
+
+      .remove-btn {
+        flex-shrink: 0;
+        margin-right: 1rem;
+        transition: opacity .4s ease;
+
+        .material-icons {
+          color: #7a8196;
+          font-size: 1.2rem;
+          transition: color .4s ease;
+        }
       }
 
       .product-image {
@@ -108,36 +112,15 @@
           margin-top: 1rem;
           font-size: 0.85rem;
 
-          #quantity {
+          .quantity {
             flex-shrink: 0;
             display: inline-block;
-            width: 60px;
+            width: 45px;
             padding: 0.2rem 0.6rem;      
             margin-left: 0.2rem;
             text-align: center;
             border-radius: 100px;
             background-color: #e6e9f0;
-          }
-          
-          .remove-btn {
-            position: relative;
-            margin-left: 1rem;
-  
-            &::before {
-              content: '';
-              position: absolute;
-              left: 0;
-              bottom: -2px;
-              transform: scaleX(0);
-              width: 100%;
-              height: 1px;
-              background-color: #F72551;
-              transition: transform .2s ease;
-            }
-        
-            &:hover::before {
-              transform: scaleX(1);
-            }
           }
         }
 
