--- a/src/app/shared/aside-panel/aside-panel.component.scss
+++ b/src/app/shared/aside-panel/aside-panel.component.scss
@@ -33,8 +33,10 @@
     backdrop-filter: saturate(180%) blur(20px);
     z-index: 10;
 
-    .close-btn {
-      margin-left: auto;
+    .title {
+      font-weight: 500;
+      text-align: center;
+      text-shadow: 0 0 10px rgba(255, 255, 255, 0.2);
     }
   }
 }
