--- a/src/app/product/shopping-bag/shopping-bag.component.html
+++ b/src/app/product/shopping-bag/shopping-bag.component.html
@@ -26,7 +26,7 @@
           <button 
             (click)="onRemove(item.productId)"
             class="remove-btn">
-            <i class="material-icons">remove_circle_outline</i>
+            <i class="material-icons">remove</i>
           </button>
 
           <div *ngIf="item.productImage" class="product-image">
