--- a/src/app/product/shopping-bag/shopping-bag.component.scss
+++ b/src/app/product/shopping-bag/shopping-bag.component.scss
@@ -24,7 +24,7 @@
   .content {
     width: 100%;
     height: 100%;
-    padding: 0 2rem;
+    padding: 0 1.5rem;
     padding-bottom: 70px;
     animation: reveal 0.4s ease;
   }
@@ -33,7 +33,7 @@
     position: relative;
     width: 100%;
     height: inherit;
-    padding: 87.19px 0 1rem;
+    padding: 3rem 0 5rem;
     overflow: hidden;
     overflow-y: auto;
     scrollbar-width: none;
@@ -44,6 +44,7 @@
     }
 
     li {
+      position: relative;
       display: flex;
       width: inherit;
       padding: 1.5rem 0;
@@ -53,13 +54,12 @@
       }
 
       .remove-btn {
-        flex-shrink: 0;
         display: flex;
         justify-content: center;
         width: 1.1rem;
         height: 1.1rem;
         margin: auto;
-        margin-right: 1rem;
+        margin-right: 1.5rem;
         transition: background-color .4s ease,
         opacity .4s ease;
         border-radius: 100%;
@@ -67,7 +67,7 @@
 
         .material-icons {
           color: #7a8196;
-          font-size: 1.2rem;
+          font-size: 1rem;
           transition: color .4s ease;
         }
 
@@ -78,8 +78,8 @@
 
       .product-image {
         flex-shrink: 0;
-        width: 110px;
-        height: 110px;
+        width: 105px;
+        height: 105px;
         margin-right: 1.5rem;
         background-color: #fff;
 
@@ -96,13 +96,16 @@
 
         .product-name {
           display: block;
-          width: fit-content;
           margin-bottom: 0.5rem;
           color: #2587f7;
           font-weight: 500;
           line-height: 1.5rem;
-          overflow: hidden;
-          text-overflow: ellipsis;
+          
+          @media (max-width: 600px) {
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+          }
         }
 
         .price {
@@ -151,6 +154,7 @@
     left: 0;
     bottom: 0;
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
     align-items: center;
     width: 100%;
@@ -170,6 +174,8 @@
 
     .subtotal {
       display: flex;
+      justify-content: space-between;
+      width: 100%;
       
       &-items {
         margin-right: 1rem;
@@ -183,90 +189,8 @@
     }
 
     .checkout-btn {
-      position: relative;
-      margin-left: auto;
-
-      &::before {
-        content: '';
-        position: absolute;
-        left: 0;
-        bottom: -2px;
-        transform: scaleX(0);
-        width: 100%;
-        height: 1px;
-        background-color: #F72551;
-        transition: transform .2s ease;
-      }
-  
-      &:hover::before {
-        transform: scaleX(1);
-      }
-    }
-  }
-}
-
-@media (max-width: 600px) {
-  .cart {
-    .content {
-      padding-bottom: 124px;
-    }
-
-    .product-info {
-
-      .product-name {
-        margin-bottom: 1rem;
-      }
-
-      .options {
-      
-        input[name="quantity"] {
-          margin-bottom: 0.4rem;
-        }
-      }
-    }
-
-    .bottom {
-      flex-direction: column;
-      justify-content: center;
-
-      .subtotal {
-        justify-content: space-between;
-        width: 100%;
-      }
-  
-      .checkout-btn {
-        margin: 0;
-        margin-top: 1.5rem;
-        position: relative;
-        justify-content: center;
-        width: 100%;
-        height: 36px;
-        color: #fff;
-        border: 1px solid #F72551;
-        border-radius: 40px;
-        background-color: #F72551;
-
-        &::before {
-          content: none;
-        }
-      }
-    }
-  }
-}
-
-@media (max-width: 400px) {
-  .cart {
-    .item-list {
-      li {
-        .product-info {
-
-          .options {
-            .remove-btn {
-              margin: 0; 
-            }
-          }
-        }
-      }
+      width: 100%;
+      margin-top: 1.5rem;
     }
   }
 }
