--- a/src/app/product/product-ratings/product-ratings.component.scss
+++ b/src/app/product/product-ratings/product-ratings.component.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   width: 100%;
   height: 100%;
-  padding: 87.19px 3rem 3rem;
+  padding: 7rem 3rem 3rem;
   overflow: hidden;
   overflow-y: auto;
   scrollbar-width: none;
@@ -16,13 +16,6 @@
   .reloading {
     opacity: 0.3 !important;
     transition: opacity .3s ease;
-  }
-
-  .title {
-    margin-bottom: 2rem;
-    text-align: center;
-    font-size: 1rem;
-    font-weight: 400;
   }
 
   .rating {
