--- a/src/app/product/product-ratings/pagination-cntrls/pagination-cntrls.component.html
+++ b/src/app/product/product-ratings/pagination-cntrls/pagination-cntrls.component.html
@@ -1,5 +1,5 @@
 <div class="pagination-cntrls">
-  <div class="page-indicator">{{ pageIndicator }}</div>
+  <p class="page-indicator">{{ pageIndicator }}</p>
 
   <div class="nav-buttons-wrapper">
     <button 
