--- a/src/app/product/search-results/search-results.component.html
+++ b/src/app/product/search-results/search-results.component.html
@@ -41,7 +41,7 @@
             (click)="onAddToBag(product.productId)"
             class="add-to-cart-btn" 
             type="button" 
-            title="Add to Bag"
+            title="Add to bag"
             aria-label="Add to bag">
             <i class="material-icons">favorite_border</i>
           </button>
