--- a/src/app/product/product-details/slider/slider.component.html
+++ b/src/app/product/product-details/slider/slider.component.html
@@ -16,6 +16,7 @@
     </div>
   
     <button 
+      *ngIf="hasMoreImages"
       (click)="toggleAllImages()" class="btn-xl show-more-btn">
       <i class="material-icons">photo_camera</i>
       <span *ngIf="images.length > altImages.length">Show more</span>
