--- a/src/app/product/product-details/slider/slider.component.scss
+++ b/src/app/product/product-details/slider/slider.component.scss
@@ -19,15 +19,46 @@
     gap: 1.5rem;
     width: 100%;
     overflow: hidden;
+    overflow-x: auto;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+    scroll-behavior: smooth;
+    scroll-snap-type: x mandatory;
+
+    &::-webkit-scrollbar {
+      display: none;
+    }
+
+    @media (max-width: 768px) {
+      display: flex;
+      width: 100%;
+      height: 350px;          
+    }
 
     .preview {
       height: 484px;
       cursor: pointer;
 
-      img {
-        display: block;
-        min-height: 100%;
+      @media (max-width: 768px) {
+        flex-shrink: 0;
+        width: 100%;
+        height: 350px;    
+        scroll-snap-align: center;
+
+        &:not(:last-of-type) {
+          margin-right: 1.5rem;
+        }
+
+        img {
+          width: 100%;
+          height: 100%;
+        }
       }
+
+      // img {
+      //   display: block;
+      //   min-height: 100%;
+      // }
     }
   }
 
@@ -35,56 +66,13 @@
     margin: 2rem auto 0;
     height: 40px;         
 
-    .material-icons {
-      margin-right: 0.6rem;
-      font-size: 1.3rem;
-    }
-  }
-
-  .preview-s {
-    display: none;
-  }
-}
-
-@media (max-width: 768px) {
-  .product-images {
-    width: 100%;
-
-    .preview-l,
-    .show-more-btn {
+    @media (max-width: 768px) {
       display: none;
     }
 
-    .preview-s {
-      display: flex;
-      width: 100%;
-      height: 350px;          
-      border-radius: 4px;
-      overflow: hidden;
-      overflow-x: auto;
-      scrollbar-width: none;
-      -ms-overflow-style: none;
-      scroll-behavior: smooth;
-      scroll-snap-type: x mandatory;
-
-      &::-webkit-scrollbar {
-        display: none;
-      }
-
-      .slide {          
-        flex-shrink: 0;
-        width: 100%;
-        height: inherit;    
-        scroll-snap-align: center;
-
-        &:not(:last-of-type) {
-          margin-right: 1.5rem;
-        }
-      }        
-    }
-
-    .thumbnail-wrapper {        
-      display: none;  
+    .material-icons {
+      margin-right: 0.6rem;
+      font-size: 1.3rem;
     }
   }
 }
