--- a/src/app/product/product-ratings/review-form/review-form.component.scss
+++ b/src/app/product/product-ratings/review-form/review-form.component.scss
@@ -35,6 +35,7 @@
       flex-wrap: wrap;
       width: 300px;
       height: 300px;
+      margin-bottom: 0.6rem;
       overflow: hidden;
       user-select: none;
       transition: all .3s ease;
@@ -50,7 +51,7 @@
     .product-name {
       color: #2587f7;
       font-size: 0.95rem;
-      font-weight: 400;
+      font-weight: 500;
       line-height: 1.5rem;
       text-align: center;
     }
