--- a/src/app/product/shopping-bag/shopping-bag.component.scss
+++ b/src/app/product/shopping-bag/shopping-bag.component.scss
@@ -54,25 +54,24 @@
       }
 
       .remove-btn {
+        flex-shrink: 0;
         display: flex;
         justify-content: center;
-        width: 1.1rem;
-        height: 1.1rem;
+        width: 1.2rem;
+        height: 1.2rem;
         margin: auto;
         margin-right: 1.5rem;
         transition: background-color .4s ease,
         opacity .4s ease;
         border-radius: 100%;
-        border: thin solid #7a8196;
+        background-color: #dee2ec;
 
         .material-icons {
-          color: #7a8196;
           font-size: 1rem;
-          transition: color .4s ease;
         }
 
         &:hover {
-          background-color: #eef0f5;
+          background-color: darken(#dee2ec, 5);
         }
       }
 
@@ -82,6 +81,12 @@
         height: 105px;
         margin-right: 1.5rem;
         background-color: #fff;
+        transition: all .3s ease;
+
+        @media (max-width: 600px) {
+          width: 90px;
+          height: 90px;
+        }
 
         img {
           height: 100%;
@@ -135,7 +140,7 @@
             margin-left: 0.2rem;
             text-align: center;
             border-radius: 100px;
-            background-color: #e6e9f0;
+            background-color: #dee2ec;
           }
         }
 
