--- a/src/app/product/product-ratings/review-form/review-form.component.html
+++ b/src/app/product/product-ratings/review-form/review-form.component.html
@@ -1,6 +1,6 @@
 <app-modal 
   [width]="'60vw'"
-  [height]="'90vh'"
+  [height]="'auto'"
   [showModal]="showForm" 
   (showModal)="onClose()">
   <div class="container" [class.review-submitted]="reviewSubmitted">
