--- a/src/app/product/shopping-bag/shopping-bag.component.scss
+++ b/src/app/product/shopping-bag/shopping-bag.component.scss
@@ -33,7 +33,7 @@
     position: relative;
     width: 100%;
     height: inherit;
-    padding: 5rem 0;
+    padding: 5rem 0 9rem;
     overflow: hidden;
     overflow-y: auto;
     scrollbar-width: none;
