--- a/src/app/product/product-details/quantity-selector/quantity-selector.component.html
+++ b/src/app/product/product-details/quantity-selector/quantity-selector.component.html
@@ -7,7 +7,9 @@
 
   <input 
     (change)="onChange(+$event.target.value)"
-    type="number" class="quantity" [value]="quantity">
+    [value]="quantity"
+    type="number"
+    class="quantity"> 
 
   <button 
     (click)="selectQuantity('plus')"
