--- a/src/app/product/product-details/quantity-selector/quantity-selector.component.scss
+++ b/src/app/product/product-details/quantity-selector/quantity-selector.component.scss
@@ -15,14 +15,11 @@
 
   .quantity {
     display: block;
-    width: 60px;
-    padding: 0.3rem 0.7rem;            
+    width: 45px;
+    padding: 0.2rem 0.6rem;            
     font-size: .85rem;
     text-align: center;
-    white-space: nowrap;
     border-radius: 100px;
-    background-color: #e6e9f0;
-    overflow: hidden;
-    user-select: none;
+    background-color: #dee2ec;
   }
 }
