--- a/src/app/product/shopping-bag/shopping-bag.component.scss
+++ b/src/app/product/shopping-bag/shopping-bag.component.scss
@@ -134,7 +134,7 @@
 
           .quantity {
             flex-shrink: 0;
-            display: block;
+            display: inline-block;
             width: 45px;
             padding: 0.2rem 0.6rem;      
             margin-left: 0.2rem;
