--- a/src/app/product/shopping-bag/shopping-bag.component.scss
+++ b/src/app/product/shopping-bag/shopping-bag.component.scss
@@ -124,25 +124,25 @@
           font-size: .8rem;
         }
 
-        .options {
-          display: flex;
-          flex-wrap: wrap;
-          align-items: center;
-          width: 100%;
-          margin-top: 1rem;
-          font-size: 0.85rem;
-
-          .quantity {
-            flex-shrink: 0;
-            display: inline-block;
-            width: 45px;
-            padding: 0.2rem 0.6rem;      
-            margin-left: 0.2rem;
-            text-align: center;
-            border-radius: 100px;
-            background-color: #dee2ec;
-          }
-        }
+        // .options {
+        //   display: flex;
+        //   flex-wrap: wrap;
+        //   align-items: center;
+        //   width: 100%;
+          
+        //   .quantity {
+        //     flex-shrink: 0;
+        //     display: inline-block;
+        //     width: 45px;
+        //     margin-top: 1rem;
+        //     // margin-left: 0.2rem;
+        //     padding: 0.2rem 0.6rem;      
+        //     font-size: 0.85rem;
+        //     text-align: center;
+        //     border-radius: 100px;
+        //     background-color: #dee2ec;
+        //   }
+        // }
 
         .subtotal {
           margin-top: 2rem;
