--- a/src/app/product/shopping-bag/shopping-bag.component.html
+++ b/src/app/product/shopping-bag/shopping-bag.component.html
@@ -53,14 +53,9 @@
             <div class="quantity">
               Qty: 
               <quantity-selector
+                [quantity]="item.quantity"
                 [limit]="item.totalStock"
                 (quantity)="quantityChanges(item, $event)"></quantity-selector>
-              <input 
-                (change)="quantityChanges(item, $event.value)"
-                [value]="item.quantity"
-                name="quantity"
-                class="quantity"
-                type="number" min="1" [max]="item.totalStock">
             </div>
 
             <div *ngIf="item.quantity > 1" class="subtotal">
