--- a/src/app/product/product-details/product-details.component.scss
+++ b/src/app/product/product-details/product-details.component.scss
@@ -79,6 +79,11 @@
           color: #963249;
           font-weight: 500;
         }
+
+        .quantity {
+          width: fit-content;
+          margin: 0 auto 4rem;  
+        }
       }
 
       .action-buttons {
