--- a/src/app/product/shopping-bag/shopping-bag.component.scss
+++ b/src/app/product/shopping-bag/shopping-bag.component.scss
@@ -57,8 +57,8 @@
         flex-shrink: 0;
         display: flex;
         justify-content: center;
-        width: 1.2rem;
-        height: 1.2rem;
+        width: 1.1rem;
+        height: 1.1rem;
         margin: auto;
         margin-right: 1.5rem;
         transition: background-color .4s ease,
@@ -67,7 +67,7 @@
         background-color: #dee2ec;
 
         .material-icons {
-          font-size: 1rem;
+          font-size: 0.95rem;
         }
 
         &:hover {
@@ -124,25 +124,9 @@
           font-size: .8rem;
         }
 
-        // .options {
-        //   display: flex;
-        //   flex-wrap: wrap;
-        //   align-items: center;
-        //   width: 100%;
-          
-        //   .quantity {
-        //     flex-shrink: 0;
-        //     display: inline-block;
-        //     width: 45px;
-        //     margin-top: 1rem;
-        //     // margin-left: 0.2rem;
-        //     padding: 0.2rem 0.6rem;      
-        //     font-size: 0.85rem;
-        //     text-align: center;
-        //     border-radius: 100px;
-        //     background-color: #dee2ec;
-        //   }
-        // }
+        .quantity {
+          display: flex;
+        }
 
         .subtotal {
           margin-top: 2rem;
