--- a/src/app/shared/quantity-selector/quantity-selector.component.html
+++ b/src/app/shared/quantity-selector/quantity-selector.component.html
@@ -1,6 +1,7 @@
 <div class="quantity-selector">
   <button 
     (click)="selectQuantity('minus')"
+    [disabled]="quantity == 1"
     class="minus-btn">
     <i class="material-icons">remove</i>
   </button>
@@ -15,6 +16,7 @@
 
   <button 
     (click)="selectQuantity('plus')"
+    [disabled]="quantity == limit"
     class="plus-btn">
     <i class="material-icons">add</i>
   </button>
