--- a/src/app/product/shopping-bag/shopping-bag.component.html
+++ b/src/app/product/shopping-bag/shopping-bag.component.html
@@ -31,7 +31,11 @@
           </button>
 
           <div *ngIf="item.productImage" class="product-image">
-            <img image-loader [src]="item.productImage" [alt]="item.productName">
+            <img 
+              image-loader 
+              [src]="item.productImage" 
+              [alt]="item.productName"
+              draggable="false">
           </div>
 
           <div class="product-info">
