--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -28,9 +28,9 @@
         type="button"
         aria-label="Shopping bag">
         <i class="fas fa-shopping-bag"></i>
-        <span *ngIf="itemCount" class="badge">
+        <div *ngIf="itemCount" class="badge">
           {{ itemCount }}
-        </span>
+        </div>
       </button>
     </div>
   </div>
