--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -75,19 +75,18 @@
       .badge {
         position: absolute;
         right: -10px;
-        top: -8px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        top: -6px;
         min-width: 18px;
-        padding: 0.3rem;
+        padding: 0 0.3rem;
         height: 18px;
         border-radius: 30px;
         color: #fff;
-        font-size: .75rem;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: .7rem;
+        line-height: 18px;
         white-space: nowrap;
         background-color: #2587f7;
-        box-shadow: 0 1px 10px rgba(0, 0, 0, 0.1);
+        box-shadow: 0 1px 6px rgba(0, 0, 0, 0.2);
         animation: reveal 0.4s ease;
         overflow: hidden;
       }
