--- a/src/app/product/shopping-bag/shopping-bag.component.scss
+++ b/src/app/product/shopping-bag/shopping-bag.component.scss
@@ -57,8 +57,8 @@
         flex-shrink: 0;
         display: flex;
         justify-content: center;
-        width: 1.1rem;
-        height: 1.1rem;
+        width: 20px;
+        height: 20px;
         margin: auto;
         margin-right: 1.5rem;
         transition: background-color .4s ease,
@@ -71,7 +71,7 @@
         }
 
         &:hover {
-          background-color: darken(#dee2ec, 5);
+          background-color: darken(#dee2ec, 10);
         }
       }
 
