--- a/src/app/shared/item-loader/item-loader.component.html
+++ b/src/app/shared/item-loader/item-loader.component.html
@@ -12,6 +12,7 @@
           <div class="bar"></div>
           <div class="bar"></div>
           <div class="bar"></div>
+          <div class="bar"></div>
         </div>
       </div>
     </div>
