--- a/src/app/shared/item-loader/item-loader.component.scss
+++ b/src/app/shared/item-loader/item-loader.component.scss
@@ -1,4 +1,4 @@
-@keyframes move {
+@keyframes wave {
   to { transform: translateX(calc(500px + 100%)); }
 }
 
@@ -8,13 +8,13 @@
   top: 0;
   width: 100%;
   height: 100%;
-  padding: 87.19px 3rem 0;
+  padding: 5rem 1.5rem 1.5rem;
   background-color: #fff;
   z-index: 10;
 
   .skeleton-container {
     width: 100%;
-    padding: 1.5rem 0;
+    padding: 2rem 0 1.5rem;
     overflow: hidden;
   
     &:not(:last-of-type) {
@@ -40,7 +40,7 @@
           rgba(255, 255, 255, 0.6), 
           transparent
         );
-        animation: move .6s linear infinite;
+        animation: wave .6s linear infinite;
       }
   
       .content {
@@ -49,25 +49,32 @@
   
         .square {
           flex-shrink: 0;
-          width: 80px;
-          height: 80px;
-          margin-right: 1rem;
+          width: 90px;
+          height: 90px;
+          margin-right: 1.5rem;
+          border-radius: 3px;
           background-color: #e9ebf1;
         }
   
         .left {
           flex: 1;
-  
+          
           .bar {
-            width: 35%;
-            height: 10px;
+            width: 20%;
+            height: 1rem;
             margin-bottom: 0.5rem;
+            border-radius: 3px;
             background-color: #e9ebf1;
 
-            &:first-of-type {
+            &:first-child {
               width: 100%;
-              height: 18px;
-              margin-bottom: 1rem;
+              height: 1.6rem;
+            }
+
+            &:last-child {
+              width: 40%;
+              height: 1.3rem;
+              margin-top: 1rem;
             }
           }
         }      
