--- a/src/app/product/shopping-bag/shopping-bag.component.scss
+++ b/src/app/product/shopping-bag/shopping-bag.component.scss
@@ -33,7 +33,7 @@
     position: relative;
     width: 100%;
     height: inherit;
-    padding: 5rem 0 9rem;
+    padding: 4rem 0 6rem;
     overflow: hidden;
     overflow-y: auto;
     scrollbar-width: none;
@@ -163,7 +163,7 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    padding: 1.5rem 2rem;
+    padding: 1.5rem;
     background-color: #fff;
 
     &::after {
