--- a/src/app/product/product-ratings/review-section/review-section.component.scss
+++ b/src/app/product/product-ratings/review-section/review-section.component.scss
@@ -75,11 +75,23 @@
             width: 100%;
             height: 2rem;
             padding-top: 3rem;
-            background: linear-gradient(transparent, #fff);
             z-index: 1;
 
+            &::before {
+              content: '';
+              position: absolute;
+              left: 0;
+              top: 0;
+              width: 100%;
+              height: 100%;
+              background: linear-gradient(transparent, #fff);
+              transition: opacity .3s ease;
+            }
+
             &.expanded {
-              background: none;
+              &::before {
+                opacity: 0;
+              }
             }
 
             button {
