--- a/src/app/product/product-details/variant-section/variant-section.component.html
+++ b/src/app/product/product-details/variant-section/variant-section.component.html
@@ -1,7 +1,9 @@
 <div class="variant-wrapper">
   <section *ngIf="colorVariants?.length" class="variant-option color">
-    <h3>Color</h3>
-    <p>{{ variantValue }}</p>
+    <button class="variant-type">
+      <h3>Color</h3>
+      <p>{{ variantValue }}</p>
+    </button>
 
     <div class="option-flex">
       <button         
@@ -17,7 +19,9 @@
   </section>
 
   <section *ngIf="sizeVariants?.length" class="variant-option size">
-    <h3>Size</h3>
+    <div class="variant-type">
+      <h3>Style</h3>
+    </div>
 
     <div class="option-flex">
       <button 
@@ -31,7 +35,9 @@
   </section>
 
   <section *ngIf="styleVariants?.length" class="variant-option style">
-    <h3>Style</h3>
+    <div class="variant-type">
+      <h3>Style</h3>
+    </div>
 
     <div class="option-flex">
       <button 
@@ -45,7 +51,9 @@
   </section>
 
   <section *ngIf="modelVariants?.length" class="variant-option model">
-    <h3>Model</h3>
+    <div class="variant-type">
+      <h3>Model</h3>
+    </div>
 
     <div class="option-flex">
       <button 
@@ -59,7 +67,9 @@
   </section>
 
   <section *ngIf="configurationVariants?.length" class="variant-option configuration">
-    <h3>Configuration</h3>
+    <div class="variant-type">
+      <h3>Configuration</h3>
+    </div>
 
     <div class="option-flex">
       <button 
@@ -73,7 +83,9 @@
   </section>
 
   <section *ngIf="capacityVariants?.length" class="variant-option configuration">
-    <h3>Capacity</h3>
+    <div class="variant-type">
+      <h3>Capacity</h3>
+    </div>
 
     <div class="option-flex">
       <button 
