--- a/src/app/product/product-details/variant-section/variant-section.component.scss
+++ b/src/app/product/product-details/variant-section/variant-section.component.scss
@@ -1,7 +1,8 @@
 .variant-wrapper {  
   width: 100%;
-  margin: 3rem 0;
-  height: auto;
+  margin: 2rem 0 3rem;
+  padding-top: 1.5rem;
+  border-top: thin solid #e7edff;
 
   .variant-option {
     width: 100%;
@@ -11,13 +12,28 @@
       margin-bottom: 2rem;
     }
     
-    h3 {
-      margin-bottom: 0.6rem;
-    }
-
-    p {
+    .variant-type {
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: flex-start;
+      width: 100%;
       margin-bottom: 1rem;
-      font-size: .85rem;
+      padding: 0.4rem 0;
+      border-radius: 4px;
+      
+      h3 {
+        margin-bottom: 0.6rem;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
+      }
+  
+      p {
+        font-size: .85rem;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
+      }
     }
 
     .option-flex {
@@ -52,7 +68,7 @@
           display: flex;
           justify-content: center;
           height: auto;
-          padding: 1rem 0;
+          padding: 0.5rem 0;
           border: none;
 
           &.active {
@@ -77,8 +93,8 @@
           }
 
           img {
-            width: 70px;
-            height: 70px;
+            width: 45px;
+            height: 45px;
             object-fit: contain;
           }          
         }
