--- a/src/app/product/product-details/variant-section/variant-section.component.html
+++ b/src/app/product/product-details/variant-section/variant-section.component.html
@@ -1,4 +1,4 @@
-<div class="variant-wrapper">
+<div *ngIf="variants" class="variant-wrapper">
   <section *ngIf="colorVariants?.length" class="variant-option color">
     <button class="variant-type">
       <h3>Color</h3>
