--- a/src/app/product/product-details/variant-section/variant-section.component.scss
+++ b/src/app/product/product-details/variant-section/variant-section.component.scss
@@ -1,6 +1,6 @@
 .variant-wrapper {  
   width: 100%;
-  margin: 2rem 0 3rem;
+  margin: 1.5rem 0 3rem;
   padding-top: 1.5rem;
   border-top: thin solid #e7edff;
 
@@ -12,27 +12,31 @@
       margin-bottom: 2rem;
     }
     
-    .variant-type {
-      flex-direction: column;
-      align-items: flex-start;
-      justify-content: flex-start;
+    .show-all-btn {
+      justify-content: space-between;
       width: 100%;
-      margin-bottom: 1rem;
+      margin-bottom: 1rem;  
       padding: 0.4rem 0;
       border-radius: 4px;
-      
-      h3 {
-        margin-bottom: 0.6rem;
-        white-space: nowrap;
-        text-overflow: ellipsis;
-        overflow: hidden;
-      }
-  
-      p {
-        font-size: .85rem;
-        white-space: nowrap;
-        text-overflow: ellipsis;
-        overflow: hidden;
+      background-color: #aaa; 
+
+      .variant-type {       
+        width: fit-content;
+        background-color: #eee; 
+
+        h3 {
+          margin-bottom: 0.4rem;
+          white-space: nowrap;
+          text-overflow: ellipsis;
+          overflow: hidden;
+        }
+    
+        p {
+          font-size: .85rem;
+          white-space: nowrap;
+          text-overflow: ellipsis;
+          overflow: hidden;
+        }
       }
     }
 
