--- a/src/app/product/product-details/variant-section/variant-section.component.html
+++ b/src/app/product/product-details/variant-section/variant-section.component.html
@@ -1,103 +1,34 @@
 <div *ngIf="variants.length" class="variant-wrapper">
-  <section *ngIf="colorVariants?.length" class="variant-option color">
-    <button class="show-all-btn">
-      <div class="variant-type">
-        <h3>Color</h3>
-        <p>{{ variantValue }}</p>
+  <div 
+    *ngFor="let option of variantOptions; index as index" >
+    <section 
+      *ngIf="option.variants.length"
+      class="variant-option color">
+      <button class="show-all-btn">
+        <div class="variant-type">
+          <h3>{{ option.label }}</h3>
+          <p>{{ dynamicVariantValue(index) }}</p>
+        </div>
+        <i class="material-icons">keyboard_arrow_right</i>
+      </button>
+
+      <div class="option-flex">
+        <button         
+          (click)="onChange(variant.variantId)"
+          *ngFor="let variant of option.variants;"
+          (mouseover)="hoveredVariant = variant.variantId"
+          (mouseout)="hoveredVariant = activeVariant"
+          [class]="option.label !== 'Color' ? 'option-icon' : 'option-icon-l'"
+          [class.active]="activeVariant == variant.variantId">
+          <img 
+            *ngIf="option.label == 'Color'"
+            [src]="variant.iconUrl" 
+            draggable="false">
+          <span *ngIf="option.label !== 'Color'">
+            {{ variant.optionValue }}
+          </span>
+        </button>
       </div>
-      <i class="material-icons">keyboard_arrow_right</i>
-    </button>
-
-    <div class="option-flex">
-      <button         
-        (click)="onChange(variant.variantId)"
-        *ngFor="let variant of colorVariants;"
-        (mouseover)="hoveredVariant = variant.variantId"
-        (mouseout)="hoveredVariant = activeVariant"
-        class="option-icon-l"
-        [class.active]="activeVariant == variant.variantId">
-        <img [src]="variant.iconUrl" draggable="false">
-      </button>
-    </div>
-  </section>
-
-  <section *ngIf="sizeVariants?.length" class="variant-option size">
-    <div class="variant-type">
-      <h3>Style</h3>
-    </div>
-
-    <div class="option-flex">
-      <button 
-        (click)="onChange(variant.variantId)"
-        *ngFor="let variant of sizeVariants;"
-        class="option-icon"
-        [class.active]="activeVariant == variant.variantId">
-        {{ variant.optionValue }}
-      </button>
-    </div>
-  </section>
-
-  <section *ngIf="styleVariants?.length" class="variant-option style">
-    <div class="variant-type">
-      <h3>Style</h3>
-    </div>
-
-    <div class="option-flex">
-      <button 
-        (click)="onChange(variant.variantId)"
-        *ngFor="let variant of styleVariants;"
-        class="option-icon"
-        [class.active]="activeVariant == variant.variantId">
-        {{ variant.optionValue }}
-      </button>
-    </div>
-  </section>
-
-  <section *ngIf="modelVariants?.length" class="variant-option model">
-    <div class="variant-type">
-      <h3>Model</h3>
-    </div>
-
-    <div class="option-flex">
-      <button 
-        (click)="onChange(variant.variantId)"
-        *ngFor="let variant of modelVariants;"
-        class="option-icon"
-        [class.active]="activeVariant == variant.variantId">
-        {{ variant.optionValue }}
-      </button>
-    </div>
-  </section>
-
-  <section *ngIf="configurationVariants?.length" class="variant-option configuration">
-    <div class="variant-type">
-      <h3>Configuration</h3>
-    </div>
-
-    <div class="option-flex">
-      <button 
-        (click)="onChange(variant.variantId)"
-        *ngFor="let variant of configurationVariants;"
-        class="option-icon"
-        [class.active]="activeVariant == variant.variantId">
-        {{ variant.optionValue }}
-      </button>
-    </div>
-  </section>
-
-  <section *ngIf="capacityVariants?.length" class="variant-option configuration">
-    <div class="variant-type">
-      <h3>Capacity</h3>
-    </div>
-
-    <div class="option-flex">
-      <button 
-        (click)="onChange(variant.variantId)"
-        *ngFor="let variant of capacityVariants;"
-        class="option-icon"
-        [class.active]="activeVariant">
-        {{ variant.optionValue }}
-      </button>
-    </div>
-  </section>
+    </section>
+  </div>
 </div>
