--- a/src/app/product/product-details/variant-section/variant-section.component.scss
+++ b/src/app/product/product-details/variant-section/variant-section.component.scss
@@ -18,14 +18,14 @@
       margin-bottom: 1rem;  
       padding: 0.4rem 0;
       border-radius: 4px;
-      background-color: #aaa; 
 
       .variant-type {       
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
         width: fit-content;
-        background-color: #eee; 
 
         h3 {
-          margin-bottom: 0.4rem;
           white-space: nowrap;
           text-overflow: ellipsis;
           overflow: hidden;
@@ -65,6 +65,11 @@
         cursor: pointer;
         overflow: hidden;        
 
+        &.active {
+          opacity: 1;
+          pointer-events: none;
+        }
+
         &-l {
           @extend .option-icon;
           opacity: 0.5;
@@ -74,11 +79,6 @@
           height: auto;
           padding: 0.5rem 0;
           border: none;
-
-          &.active {
-            opacity: 1;
-            pointer-events: none;
-          }
   
           &:not(.active)::after {
             content: '';
