--- a/src/app/product/product-details/variant-section/variant-section.component.scss
+++ b/src/app/product/product-details/variant-section/variant-section.component.scss
@@ -83,16 +83,37 @@
         opacity .4s ease, 
         background-color .4s ease;
         cursor: pointer;
-        overflow: hidden;        
+        overflow: hidden;
 
         &.active {
           opacity: 1;
           pointer-events: none;
+
+          &::after {
+            opacity: 1;
+            background-color: rgba(204, 207, 216, 0.6); 
+          }
+        }
+        
+        &::after {
+          content: '';
+          opacity: 0;
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;          
+          background-color: rgba(204, 207, 216, 0.4);
+          transition: background-color .4s ease,
+          opacity .4s ease;
+        }
+
+        &:hover::after {
+          opacity: 1;
         }
 
         &-l {
           @extend .option-icon;
-          opacity: 0.5;
           position: relative;   
           display: flex;
           justify-content: center;
@@ -100,25 +121,9 @@
           padding: 0.5rem 0;
           border: none;
   
-          &:not(.active)::after {
-            content: '';
-            opacity: 0;
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(204, 207, 216, 0.5); 
-            transition: opacity .4s ease;
-          }
-  
-          &:hover::after {
-            opacity: 1;
-          }
-
           img {
-            width: 45px;
-            height: 45px;
+            width: 55px;
+            height: 55px;
             object-fit: contain;
           }          
         }
