--- a/src/app/product/product-details/variant-section/variant-panel/variant-panel.component.html
+++ b/src/app/product/product-details/variant-section/variant-panel/variant-panel.component.html
@@ -1,9 +1,10 @@
 <aside-panel 
-  [title]="variantLabel"
+  *ngIf="variantOption"
+  [title]="variantOption.label"
   [showPanel]="showPanel" 
   (showPanel)="onClose()">
 
   <div class="variant-panel">
-    
+
   </div>
 </aside-panel> 
