--- a/src/app/product/product-details/variant-section/variant-section.component.scss
+++ b/src/app/product/product-details/variant-section/variant-section.component.scss
@@ -1,8 +1,6 @@
 .variant-wrapper {  
   width: 100%;
-  margin: 2rem 0 3rem;
-  padding-top: 2rem;
-  border-top: thin solid #e7edff;
+  margin-top: 3rem;
 
   @media (max-width: 768px) {
     width: 100%;
