--- a/src/app/product/product-details/variant-section/variant-panel/variant-panel.component.html
+++ b/src/app/product/product-details/variant-section/variant-panel/variant-panel.component.html
@@ -5,7 +5,8 @@
 
   <div class="variant-panel">
     <div class="option-list">
-      <button         
+      <button     
+        (click)="onOptionClick(variant.variantId)"    
         #optionBtn
         *ngFor="let variant of option?.variants;"
         class="option"
