--- a/src/app/product/product-details/variant-section/variant-section.component.html
+++ b/src/app/product/product-details/variant-section/variant-section.component.html
@@ -10,7 +10,7 @@
         class="show-all-btn">
         <div class="variant-type">
           <h3>{{ option.label }}</h3>
-          <p>{{ dynamicVariantValue(index) }}</p>
+          <p>{{ dynamicVariantValue(option) }}</p>
         </div>
         <i class="material-icons">keyboard_arrow_right</i>
       </button>
