--- a/src/app/product/product-details/variant-section/variant-section.component.scss
+++ b/src/app/product/product-details/variant-section/variant-section.component.scss
@@ -25,8 +25,15 @@
       padding: 0.4rem 0;
       border-radius: 4px;
 
-      .variant-type {       
+      &:disabled {
+        cursor: default;
 
+        .material-icons {
+          opacity: 0;
+        }
+      }
+
+      .variant-type {       
         h3 {
           white-space: nowrap;
           text-align: left;
