--- a/src/app/product/product-details/slider/lightbox/lightbox.component.scss
+++ b/src/app/product/product-details/slider/lightbox/lightbox.component.scss
@@ -101,7 +101,7 @@
           width: 100%;
           height: 100%;          
           object-fit: contain;
-          transition: transform 0.3s ease;
+          transition: transform 0.3s ease, transform-origin .1s ease;
         }
 
         &.zoomed-in {
