--- a/src/app/product/product-details/slider/lightbox/lightbox.component.scss
+++ b/src/app/product/product-details/slider/lightbox/lightbox.component.scss
@@ -101,11 +101,11 @@
           width: 100%;
           height: 100%;          
           object-fit: contain;
-          transition: transform 0.3s ease, transform-origin .1s ease;
+          transition: transform .3s ease, transform-origin .1s ease;
         }
 
         &.zoomed-in {
-          max-width: 1200px;
+          max-width: 100%;
           padding: 2rem;
           cursor: zoom-out;
 
