--- a/src/app/navbar/search-bar/search-bar.component.scss
+++ b/src/app/navbar/search-bar/search-bar.component.scss
@@ -71,6 +71,7 @@
         height: 20px;
         pointer-events: none;
         background-color: #dee2ec;
+        border-radius: 100%;
 
         &.visible {
           opacity: 1;
