--- a/src/styles.scss
+++ b/src/styles.scss
@@ -167,10 +167,8 @@ img {
   display: flex;
   justify-content: center;
   align-items: center;
-  // width: 35px;
-  // height: 35px;
-  // border-radius: 40px;
-  transition: opacity .4s ease;
+  transition: background-color .4s,
+  opacity .4s ease;
 
   &:disabled {
     opacity: 0.6;
