--- a/src/app/navbar/search-bar/search-bar.component.scss
+++ b/src/app/navbar/search-bar/search-bar.component.scss
@@ -22,7 +22,7 @@
     align-items: center;
     width: 100%;
 
-    .form-group {
+    .search-form {
       flex: 1;
       position: relative;
       display: flex;
